# api/handlers/v1/chapters_get_list.go
@@ -18,6 +18,7 @@ import (
 // @Produce		json
 // @Param			provider_slug	path		string	true	"Provider slug"	example(asura)
 // @Param			series_slug		path		string	true	"Series slug"	example(reincarnator)
+// @Param			sort			query		string	false	"Sort order"	enum(asc, desc)	default(asc)
 // @Success		200				{object}	ResponseV1
 // @Failure		404				{object}	ResponseV1
 // @Failure		500				{object}	ResponseV1
@@ -29,6 +30,18 @@ func (h *Handler) GetChapterList(c echo.Context) error {
 
 	providerSlug := c.Param("provider_slug")
 	seriesSlug := c.Param("series_slug")
+	sort := c.QueryParam("sort")
+
+	var order db.SortOrder
+
+	switch sort {
+	case "asc":
+		order = db.ASC
+	case "desc":
+		order = db.DESC
+	default:
+		order = db.ASC
+	}
 
 	c.Logger().Debugj(map[string]interface{}{
 		"_source":       "v1.GetChapterList",
