# api/handlers/v1/chapters_get_list_all.go
@@ -18,6 +18,7 @@ import (
 // @Produce		json
 // @Param			provider_slug	path		string	true	"Provider slug"	example(asura)
 // @Param			series_slug		path		string	true	"Series slug"	example(reincarnator)
+// @Param			sort			query		string	false	"Sort order"	enum(asc, desc)	default(asc)
 // @Success		200				{object}	ResponseV1
 // @Failure		404				{object}	ResponseV1
 // @Failure		500				{object}	ResponseV1
@@ -29,14 +30,27 @@ func (h *Handler) GetChapterListAll(c echo.Context) error {
 
 	providerSlug := c.Param("provider_slug")
 	seriesSlug := c.Param("series_slug")
+	sort := c.QueryParam("sort")
 
 	c.Logger().Debugj(map[string]interface{}{
 		"_source":       "v1.GetChapterListAll",
 		"provider_slug": providerSlug,
 		"series_slug":   seriesSlug,
+		"sort":          sort,
 	})
 
-	cache, err := h.redis.GetChapterListAllV1(c.Request().Context(), providerSlug, seriesSlug)
+	var order db.SortOrder
+
+	switch sort {
+	case "asc":
+		order = db.ASC
+	case "desc":
+		order = db.DESC
+	default:
+		order = db.ASC
+	}
+
+	cache, err := h.redis.GetChaptersListAllV1(c.Request().Context(), providerSlug, seriesSlug, order)
 	if err == nil {
 		span.Status = sentry.SpanStatusOK
 		return c.JSON(http.StatusOK, v1Response.Response{
